--- a/style.css
+++ b/style.css
@@ -953,3 +953,16 @@ footer p {
   z-index: 1; /* lower than nav */
   position: relative;
 }
+
+/* style of project  */
+
+#projects .details-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.project-img {
+  width: 100%;
+  border-radius: 8px;
+}
